--- a/requirements.txt
+++ b/requirements.txt
@@ -1,234 +1,171 @@
 accelerate==1.10.1
 ag-ui-protocol==0.1.10
-agno==1.8.4
-aiofiles==24.1.0
+aiofiles==25.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiohttp-cors==0.8.1
+aiohttp==3.13.3
 aiosignal==1.4.0
-airportsdata==20250909
 altair==5.5.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anthropic==0.71.0
-anyio==4.11.0
-apache-tvm-ffi==0.1.4
+anyio==4.12.1
+apache-tvm-ffi==0.1.8.post2
 argcomplete==3.6.3
-ascii_colors==0.11.4
+ascii_colors==0.11.7
 astor==0.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
-asyncer==0.0.12
-attrs==25.3.0
-Authlib==1.6.5
-backoff==2.2.1
+attrs==25.4.0
+Authlib==1.6.6
 bcrypt==5.0.0
-beartype==0.22.5
+beartype==0.22.9
 beautifulsoup4==4.13.5
-bidict==0.23.1
-blake3==1.0.6
+blake3==1.0.8
 blinker==1.9.0
-blis==1.3.0
-boto3==1.40.75
-botocore==1.40.75
-brotli==1.2.0
-cachetools==6.2.0
+blis==1.3.3
+boto3==1.42.27
+botocore==1.42.27
+cachetools==6.2.4
 catalogue==2.0.10
-cbor==1.0.0
-cbor2==5.7.0
-certifi==2025.8.3
+cbor2==5.8.0
+certifi==2026.1.4
 cffi==2.0.0
-chainlit==2.9.4
-charset-normalizer==3.4.3
-chevron==0.14.0
-click==8.3.0
-cloudpathlib==0.22.0
-cloudpickle==3.1.1
-cohere==5.20.0
+charset-normalizer==3.4.4
+click==8.3.1
+cloudpathlib==0.23.0
+cloudpickle==3.1.2
+cohere==5.20.1
 colorama==0.4.6
 colorclass==2.2.2
-colorful==0.5.8
-comm @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_comm_1753453984/work
 compressed-rtf==1.0.7
 compressed-tensors==0.12.2
 confection==0.1.5
 configparser==7.2.0
-contourpy==1.3.3
-cryptography==46.0.1
-cuda-bindings==13.0.3
-cuda-pathfinder==1.3.2
-cuda-python==13.0.3
-cuid==0.4
+cryptography==46.0.3
+cuda-bindings==13.1.1
+cuda-pathfinder==1.3.3
+cuda-python==13.1.1
 cupy-cuda12x==13.6.0
-curated-tokenizers==0.0.9
-curated-transformers==0.1.1
-cycler==0.12.1
-cyclopts==4.2.4
-cymem==2.0.11
+cyclopts==4.4.5
+cymem==2.0.13
 dataclasses-json==0.6.7
-debugpy @ file:///home/task_176242086745011/conda-bld/debugpy_1762421636577/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
-Deprecated==1.2.18
 depyf==0.20.0
 dill==0.4.0
 diskcache==5.6.3
-distlib==0.4.0
 distro==1.9.0
 dnspython==2.8.0
 docstring_parser==0.17.0
-docutils==0.22.3
+docutils==0.22.4
 easygui==0.98.3
 ebcdic==1.1.1
 ecdsa==0.19.1
 einops==0.8.1
 email-validator==2.3.0
-emoji==2.15.0
-en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl#sha256=293e9547a655b25499198ab15a525b05b9407a75f10255e405e8c3854329ab63
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-en_core_web_trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl#sha256=272a31e9d8530d1e075351d30a462d7e80e31da23574f1b274e200f3fff35bf5
 et_xmlfile==2.0.0
-eval_type_backport==0.3.0
-exceptiongroup==1.3.0
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1756729339227/work
+eval_type_backport==0.3.1
+exceptiongroup==1.3.1
+executing==2.2.1
 extract-msg==0.55.0
 faiss==1.9.0
-faiss-cpu==1.12.0
-fastapi==0.123.4
-fastapi-cli==0.0.13
-fastapi-cloud-cli==0.2.1
+fakeredis==2.33.0
+fastapi==0.128.0
+fastapi-cli==0.0.20
+fastapi-cloud-cli==0.10.1
+fastar==0.8.0
 fastavro==1.12.1
-fastmcp==2.13.1
+fastmcp==2.14.3
 fastrlock==0.8.3
-fastuuid==0.14.0
-ffmpy==1.0.0
-filelock==3.19.1
-filetype==1.2.0
-flashinfer-python==0.5.2
-fonttools==4.60.0
-frozendict==2.4.6
-frozenlist==1.7.0
+filelock==3.20.0
+flashinfer-python==0.5.3
+frozendict==2.4.7
+frozenlist==1.8.0
 fsspec==2024.12.0
-future==1.0.0
-genai-prices==0.0.40
-genson==1.3.0
+genai-prices==0.0.51
 gguf==0.17.1
 gitdb==4.0.12
-GitPython==3.1.45
-google-api-core==2.28.1
-google-auth==2.43.0
-google-genai==1.51.0
-googleapis-common-protos==1.70.0
-gradio==6.2.0
-gradio_client==2.0.2
-graphdatascience==1.17
-greenlet==3.2.4
+GitPython==3.1.46
+google-api-core==2.29.0
+google-auth==2.47.0
+google-genai==1.57.0
+googleapis-common-protos==1.72.0
+greenlet==3.3.0
 griffe==1.15.0
-groovy==0.1.2
-groq==0.34.1
-grpcio==1.67.1
+groq==1.0.0
 gunicorn==23.0.0
 h11==0.16.0
-hf-xet==1.1.10
-html5lib==1.1
+hf-xet==1.2.0
 httpcore==1.0.9
-httptools==0.6.4
+httptools==0.7.1
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.35.1
-idna==3.10
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+idna==3.11
 ijson==3.4.0.post0
-importlib_metadata==8.0.0
-inflection==0.5.1
-inscriptis==2.6.0
+importlib_metadata==8.7.1
 interegular==0.3.3
 invoke==2.2.1
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipykernel_1761567932/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1762350942/work
-ipython_pygments_lexers @ file:///home/conda/feedstock_root/build_artifacts/ipython_pygments_lexers_1737123620466/work
-ir_datasets==0.5.11
 jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.3.0
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
+jaraco.context==6.1.0
+jaraco.functools==4.4.0
 jeepney==0.9.0
 Jinja2==3.1.6
-jiter==0.11.0
+jiter==0.12.0
 jmespath==1.0.1
-joblib==1.5.2
-jq==1.10.0
 json_repair==0.44.1
 jsonpatch==1.33
-jsonpath-ng==1.7.0
 jsonpointer==3.0.0
-jsonschema==4.25.1
+jsonschema==4.26.0
 jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1733440914442/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_jupyter_core_1760643864/work
 keyring==25.7.0
-kiwisolver==1.4.9
-langchain==1.2.0
-langchain-classic==1.0.0
+langchain==1.2.3
+langchain-classic==1.0.1
 langchain-community==0.4.1
-langchain-core==1.2.3
-langchain-experimental==0.4.1
+langchain-core==1.2.7
 langchain-huggingface==1.2.0
-langchain-neo4j==0.6.0
+langchain-neo4j==0.7.0
 langchain-ollama==1.0.1
-langchain-openai==1.1.6
+langchain-openai==1.1.7
 langchain-text-splitters==1.1.0
-langcodes==3.5.0
+langcodes==3.5.1
 langdetect==1.0.9
-langgraph==1.0.5
-langgraph-checkpoint==2.1.1
-langgraph-prebuilt==1.0.5
-langgraph-sdk==0.3.0
-langgraph-supervisor==0.0.31
-langsmith==0.4.31
-language_data==1.3.0
+langgraph==1.0.6
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.6
+langgraph-sdk==0.3.3
+langsmith==0.6.2
 lark==1.2.2
-Lazify==0.4.0
-lightrag-hku==1.4.9.10
-litellm==1.80.7
-literalai==0.1.201
+-e git+https://github.com/HKUDS/LightRAG.git@7d00bf68fea4b32b4790570ea306d384e7a54b51#egg=lightrag_hku
 llguidance==1.3.0
 llvmlite==0.44.0
 lm-format-enforcer==0.11.3
-logfire==4.14.2
-logfire-api==4.14.2
+logfire==4.18.0
+logfire-api==4.18.0
 loguru==0.7.3
+lupa==2.6
 lxml==6.0.2
-lz4==4.4.5
-marisa-trie==1.3.1
 markdown-it-py==4.0.0
 MarkupSafe==2.1.5
-marshmallow==3.26.1
-matplotlib==3.10.6
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1761214490209/work
-mcp==1.21.2
+marshmallow==3.26.2
+mcp==1.25.0
 mdurl==0.1.2
-mistral_common==1.8.5
+mistral_common==1.8.8
 mistralai==1.9.11
-model-hosting-container-standards==0.1.9
+model-hosting-container-standards==0.1.13
 more-itertools==10.8.0
 mpmath==1.3.0
-msgpack==1.1.1
-msgspec==0.19.0
-msoffcrypto-tool==5.4.2
-multi-agent-generator==0.4.0
-multidict==6.6.4
-multimethod==2.0
+msgpack==1.1.2
+msgspec==0.20.0
+msoffcrypto-tool==6.0.0
+multidict==6.7.0
 multiprocess==0.70.18
-murmurhash==1.0.13
+murmurhash==1.0.15
 mypy_extensions==1.1.0
 nano-vectordb==0.0.4.3
-narwhals==2.8.0
-neo4j==5.28.2
-neo4j-graphrag==1.10.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
-networkx==3.3
-nexus-rpc==1.1.0
+narwhals==2.15.0
+neo4j==6.1.0
+neo4j-graphrag==1.12.0
+networkx==3.6.1
+nexus-rpc==1.2.0
 ninja==1.13.0
-nltk==3.9.2
 numba==0.61.2
 numpy==1.26.4
 nvidia-cublas-cu12==12.8.4.1
@@ -236,261 +173,177 @@ nvidia-cuda-cupti-cu12==12.8.90
 nvidia-cuda-nvrtc-cu12==12.8.93
 nvidia-cuda-runtime-cu12==12.8.90
 nvidia-cudnn-cu12==9.10.2.21
-nvidia-cudnn-frontend==1.16.0
+nvidia-cudnn-frontend==1.17.0
 nvidia-cufft-cu12==11.3.3.83
 nvidia-cufile-cu12==1.13.1.3
 nvidia-curand-cu12==10.3.9.90
 nvidia-cusolver-cu12==11.7.3.90
 nvidia-cusparse-cu12==12.5.8.93
 nvidia-cusparselt-cu12==0.7.1
-nvidia-cutlass-dsl==4.3.1
-nvidia-ml-py==13.580.82
+nvidia-cutlass-dsl==4.3.5
+nvidia-ml-py==13.590.44
 nvidia-nccl-cu12==2.27.5
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
 olefile==0.47
 oletools==0.60.2
-ollama==0.6.0
-openai==2.8.1
-openai-harmony==0.0.4
+ollama==0.6.1
+openai==2.15.0
+openai-harmony==0.0.8
 openapi-pydantic==0.5.1
-opencensus==0.11.4
-opencensus-context==0.1.3
-opencv-python-headless==4.12.0.88
+opencv-python-headless==4.11.0.86
 openpyxl==3.1.5
 opentelemetry-api==1.39.1
-opentelemetry-exporter-otlp==1.26.0
 opentelemetry-exporter-otlp-proto-common==1.39.1
-opentelemetry-exporter-otlp-proto-grpc==1.39.1
 opentelemetry-exporter-otlp-proto-http==1.39.1
-opentelemetry-exporter-prometheus==0.59b0
+opentelemetry-exporter-prometheus==0.60b1
 opentelemetry-instrumentation==0.60b1
-opentelemetry-instrumentation-agno==0.50.1
-opentelemetry-instrumentation-alephalpha==0.50.1
-opentelemetry-instrumentation-anthropic==0.50.1
-opentelemetry-instrumentation-bedrock==0.50.1
-opentelemetry-instrumentation-chromadb==0.50.1
-opentelemetry-instrumentation-cohere==0.50.1
-opentelemetry-instrumentation-crewai==0.50.1
-opentelemetry-instrumentation-google-generativeai==0.50.1
-opentelemetry-instrumentation-groq==0.50.1
-opentelemetry-instrumentation-haystack==0.50.1
-opentelemetry-instrumentation-httpx==0.59b0
-opentelemetry-instrumentation-lancedb==0.50.1
-opentelemetry-instrumentation-langchain==0.50.1
-opentelemetry-instrumentation-llamaindex==0.50.1
-opentelemetry-instrumentation-logging==0.60b1
-opentelemetry-instrumentation-marqo==0.50.1
-opentelemetry-instrumentation-mcp==0.50.1
-opentelemetry-instrumentation-milvus==0.50.1
-opentelemetry-instrumentation-mistralai==0.50.1
-opentelemetry-instrumentation-ollama==0.50.1
-opentelemetry-instrumentation-openai==0.50.1
-opentelemetry-instrumentation-openai-agents==0.50.1
-opentelemetry-instrumentation-pinecone==0.50.1
-opentelemetry-instrumentation-qdrant==0.50.1
-opentelemetry-instrumentation-redis==0.60b1
-opentelemetry-instrumentation-replicate==0.50.1
-opentelemetry-instrumentation-requests==0.60b1
-opentelemetry-instrumentation-sagemaker==0.50.1
-opentelemetry-instrumentation-sqlalchemy==0.60b1
-opentelemetry-instrumentation-threading==0.60b1
-opentelemetry-instrumentation-together==0.50.1
-opentelemetry-instrumentation-transformers==0.50.1
-opentelemetry-instrumentation-urllib3==0.60b1
-opentelemetry-instrumentation-vertexai==0.50.1
-opentelemetry-instrumentation-watsonx==0.50.1
-opentelemetry-instrumentation-weaviate==0.50.1
-opentelemetry-instrumentation-writer==0.50.1
+opentelemetry-instrumentation-httpx==0.60b1
 opentelemetry-proto==1.39.1
 opentelemetry-sdk==1.39.1
 opentelemetry-semantic-conventions==0.60b1
-opentelemetry-semantic-conventions-ai==0.4.13
 opentelemetry-util-http==0.60b1
-optimum==2.0.0
-orjson==3.11.3
-ormsgpack==1.10.0
-outlines==1.2.6
+orjson==3.11.5
+ormsgpack==1.12.1
 outlines_core==0.2.11
-packaging @ file:///croot/packaging_1753775359799/work
+packaging @ file:///home/task_176104874243446/conda-bld/packaging_1761049080023/work
 pandas==2.3.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_parso_1755974222/work
-partial-json-parser==0.2.1.1.post6
+partial-json-parser==0.2.1.1.post7
 pathable==0.4.4
 pathvalidate==3.3.1
 pcodedmp==1.2.6
-pdf2image==1.17.0
-pdfminer.six==20251107
-pdfplumber==0.11.8
-peft==0.17.1
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
-pillow==11.0.0
-pipmaster==1.0.10
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1759953252/work
-ply==3.11
-preshed==3.0.10
+pillow==12.0.0
+pipmaster==1.1.0
+platformdirs==4.5.1
+preshed==3.0.12
 prometheus-fastapi-instrumentator==7.1.0
-prometheus_client==0.23.1
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1756321756983/work
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==6.33.1
-psutil @ file:///home/task_176189642211680/conda-bld/psutil_1761896463664/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+prometheus_client==0.24.1
+prompt_toolkit==3.0.52
+propcache==0.4.1
+proto-plus==1.27.0
+protobuf==6.33.4
+psutil==7.2.1
 py-cpuinfo==9.0.0
-py-key-value-aio==0.2.8
-py-key-value-shared==0.2.8
-py-spy==0.4.1
-pyarrow==20.0.0
-pyarrow-hotfix==0.7
+py-key-value-aio==0.3.0
+py-key-value-shared==0.3.0
+pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pybase64==1.4.2
+pybase64==1.4.3
 pycountry==24.6.1
 pycparser==2.23
 pycryptodome==3.23.0
 pydantic==2.12.5
-pydantic-ai==1.19.0
-pydantic-ai-slim==1.19.0
-pydantic-evals==1.19.0
-pydantic-extra-types==2.10.5
-pydantic-graph==1.19.0
-pydantic-settings==2.11.0
+pydantic-ai==1.42.0
+pydantic-ai-slim==1.42.0
+pydantic-evals==1.42.0
+pydantic-extra-types==2.11.0
+pydantic-graph==1.42.0
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 pydeck==0.9.1
-pydub==0.25.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1750615794071/work
+pydocket==0.16.6
+Pygments==2.19.2
 PyJWT==2.10.1
-pyparsing==3.2.5
-pypdf==6.1.1
-PyPDF2==3.0.1
-pypdfium2==5.0.0
+pyparsing==3.3.1
+pypdf==6.6.0
 pyperclip==1.11.0
 pypinyin==0.55.0
 pytesseract==0.3.13
 python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_python-dateutil_1751104122/work
 python-docx==1.2.0
-python-dotenv==1.1.1
-python-engineio==4.13.0
-python-iso639==2025.2.18
+python-dotenv==1.2.1
 python-jose==3.5.0
-python-json-logger==3.3.0
-python-magic==0.4.27
-python-multipart==0.0.20
-python-oxmsg==0.0.2
+python-json-logger==4.0.0
+python-multipart==0.0.21
 python-pptx==1.0.2
-python-socketio==5.16.0
 pytz==2025.2
-PyYAML==6.0.2
-pyzmq @ file:///home/task_176237559504765/conda-bld/pyzmq_1762375608075/work
-RapidFuzz==3.14.1
-ray==2.48.0
+PyYAML==6.0.3
+pyzmq==27.1.0
+ray==2.53.0
 red-black-tree-mod==1.22
+redis==7.1.0
 referencing==0.36.2
-regex==2025.9.18
+regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
-rich==14.1.0
+rich==14.2.0
 rich-rst==1.3.2
-rich-toolkit==0.15.1
-rignore==0.6.4
-rpds-py==0.27.1
+rich-toolkit==0.17.1
+rignore==0.7.6
+rpds-py==0.30.0
 rsa==4.9.1
-RTFDE==0.1.2.1
-s3transfer==0.14.0
-safehttpx==0.1.7
-safetensors==0.6.2
-scikit-learn==1.7.2
-scipy==1.16.2
-SecretStorage==3.4.1
-semantic-version==2.10.0
-sentence-transformers==5.1.0
+RTFDE==0.1.2.2
+s3transfer==0.16.0
+safetensors==0.7.0
+scipy==1.17.0
+SecretStorage==3.5.0
 sentencepiece==0.2.1
-sentry-sdk==2.39.0
+sentry-sdk==2.49.0
 setproctitle==1.3.7
-setuptools==78.1.1
+setuptools==79.0.1
 shellingham==1.5.4
-simple-websocket==1.1.0
 six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
-smart_open==7.3.1
+smart_open==7.5.0
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soundfile==0.13.1
-soupsieve==2.8
+soupsieve==2.8.1
 soxr==1.0.0
 spacy==3.8.7
-spacy-alignments==0.9.2
-spacy-curated-transformers==0.3.1
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-SQLAlchemy==2.0.43
-srsly==2.5.1
-sse-starlette==3.0.3
-stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+SQLAlchemy==2.0.45
+srsly==2.5.2
+sse-starlette==3.1.2
 starlette==0.50.0
 streamlit==1.51.0
 supervisor==4.3.0
 sympy==1.14.0
-syncer==2.0.3
 tabulate==0.9.0
-temporalio==1.19.0
+temporalio==1.20.0
 tenacity==9.1.2
-textdistance==4.6.3
-thinc==8.3.6
-threadpoolctl==3.6.0
-tiktoken==0.11.0
-tokenizers==0.22.1
+thinc==8.3.10
+tiktoken==0.12.0
+tokenizers==0.22.2
 toml==0.10.2
-tomli==2.3.0
-tomlkit==0.13.3
-torch==2.9.0
-torchaudio==2.9.0
-torchvision==0.24.0
-tornado @ file:///croot/tornado_1748956929273/work
+torch==2.9.0+cu128
+torchaudio==2.9.0+cu128
+torchvision==0.24.0+cu128
+tornado==6.5.4
 tqdm==4.67.1
-traceloop-sdk==0.50.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
-transformers==4.57.0
-trec-car-tools==2.6
+transformers==4.57.5
 triton==3.5.0
-typer==0.19.2
-types-protobuf==6.32.1.20251105
+typer==0.21.1
+typer-slim==0.21.1
+types-protobuf==6.32.1.20251210
 types-PyYAML==6.0.12.20250915
-types-requests==2.32.4.20250913
+types-requests==2.32.4.20260107
 typing-inspect==0.9.0
 typing-inspection==0.4.2
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1756220668/work
-tzdata==2025.2
+typing_extensions==4.15.0
+tzdata==2025.3
 tzlocal==5.3.1
-unicorn==2.1.4
-unlzw3==0.2.3
-unstructured==0.18.15
-unstructured-client==0.42.3
-urllib3==2.5.0
-uuid_utils==0.12.0
-uvicorn==0.37.0
-uvloop==0.21.0
-virtualenv==20.35.4
-vllm==0.11.2
-warc3-wet==0.2.5
-warc3-wet-clueweb09==0.2.5
+urllib3==2.6.3
+uuid_utils==0.13.0
+uv==0.9.25
+uvicorn==0.40.0
+uvloop==0.22.1
+vllm==0.13.0
 wasabi==1.1.3
 watchdog==6.0.0
 watchfiles==1.1.1
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1758622279606/work
-weasel==0.4.1
-webencodings==0.5.1
+wcwidth==0.2.14
+weasel==0.4.3
 websockets==15.0.1
 wheel==0.45.1
 wrapt==1.17.3
-wsproto==1.3.2
-xformers==0.0.33.post1
-xgrammar==0.1.25
+xformers==0.0.32.post1
+xgrammar==0.1.27
 xlsxwriter==3.2.9
-xxhash==3.5.0
-yarl==1.20.1
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1749421620841/work
-zlib-state==0.1.10
+xxhash==3.6.0
+yarl==1.22.0
+zipp==3.23.0
 zstandard==0.25.0
